# numaflow-python

examples/map/anomaly/: example.py  pyproject.toml
