[tool.poetry]
name = "balaji-anomaly"
version = "0.1.0"
description = "anomaly UDF"
authors = ["Numaflow developers"]

[tool.poetry.dependencies]
python = "~3.10"
#pynumaflow = "~0.6.0"
pynumaflow = {git = "https://github.com/balajikrb/numaflow-python", rev = "main"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
